# AnemoneEngine

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  format.ps1  format.sh
Engine/: CMakeLists.txt
Engine/Application/: CMakeLists.txt
Engine/Application/AnemoneApplication/: CMakeLists.txt  HostApplication.cxx  HostApplication.hxx  HostApplicationEvents.cxx  HostApplicationEvents.hxx  HostDialogs.cxx  HostDialogs.hxx  HostSplashScreen.cxx  HostSplashScreen.hxx  HostWindow.cxx  HostWindow.hxx  Module.cxx  Module.hxx
Engine/Assets/: CMakeLists.txt
Engine/Assets/Shaders/: CMakeLists.txt
Engine/Engine/: CMakeLists.txt
Engine/Engine/AnemoneEngine/: CMakeLists.txt
Engine/EntryPoint/: CMakeLists.txt
Engine/EntryPoint/AnemoneEntryPoint/: CMakeLists.txt  EntryPoint.hxx
Engine/Geometry/AnemoneGeometry/: Mesh.hxx
Engine/Graphics/: CMakeLists.txt
Engine/Graphics/AnemoneGraphics/: CMakeLists.txt  DxgiFormat.hxx  Image.cxx  Image.hxx  ImageDDS.cxx  Module.cxx  Module.hxx  PixelFormat.cxx  PixelFormat.hxx
Engine/Memory/: CMakeLists.txt
Engine/Memory/AnemoneMemory/: CMakeLists.txt  MemoryArena.cxx  MemoryArena.hxx  Module.cxx  Module.hxx  RawMemoryArena.cxx  RawMemoryArena.hxx
Engine/Network/: CMakeLists.txt
Engine/Network/AnemoneNetwork/: CMakeLists.txt  Detail.hxx  IpAddress.cxx  IpAddress.hxx  IpEndPoint.cxx  IpEndPoint.hxx  Local.cxx  Local.hxx  Module.cxx  Socket.cxx  Socket.hxx  Tcp.cxx  Tcp.hxx  Udp.cxx
Engine/Profiler/: CMakeLists.txt
Engine/Profiler/AnemoneProfiler/: CMakeLists.txt  Module.cxx  Module.hxx  NvidiaProfilerBackend.cxx  NvidiaProfilerBackend.hxx  Profiler.cxx  Profiler.hxx
Engine/Render/: CMakeLists.txt
Engine/Render/AnemoneRender/: CMakeLists.txt  Device.hxx  Gpu.cxx  Gpu.hxx  Module.cxx  Module.hxx  SwapChain.cxx  SwapChain.hxx
Engine/Render/Render/: CMakeLists.txt
Engine/RenderVulkan/: CMakeLists.txt
Engine/RenderVulkan/AnemoneRenderVulkan/: CMakeLists.txt  Module.cxx  Module.hxx  VulkanBuffer.hxx  VulkanCommandBuffer.cxx  VulkanCommandBuffer.hxx  VulkanCommandList.cxx  VulkanCommandList.hxx  VulkanCpuAllocator.cxx  VulkanCpuAllocator.hxx  VulkanDescriptorSets.cxx  VulkanDescriptorSets.hxx  VulkanDevice.cxx  VulkanDevice.hxx  VulkanError.cxx  VulkanError.hxx  VulkanExtensions.cxx  VulkanExtensions.hxx  VulkanHeaders.cxx  VulkanHeaders.hxx  VulkanInstance.cxx  VulkanInstance.hxx  VulkanPhysicalDevice.hxx  VulkanPipeline.cxx  VulkanPipeline.hxx  VulkanQueue.cxx  VulkanQueue.hxx  VulkanSemaphore.cxx  VulkanSemaphore.hxx  VulkanShader.cxx  VulkanShader.hxx  VulkanSwapChain.cxx  VulkanSwapChain.hxx  VulkanUtils.cxx  VulkanUtils.hxx  VulkanVertexDeclaration.cxx  VulkanVertexDeclaration.hxx  VulkanViewport.cxx  VulkanViewport.hxx
Engine/Renderer/Docs/: Design.md
Engine/Runtime/: CMakeLists.txt
Engine/Runtime/AnemoneBase/: AdaptiveTimer.cxx  AdaptiveTimer.hxx  CMakeLists.txt  Checked.cxx  Checked.hxx  Compression.cxx  Compression.hxx  ConsoleFunction.cxx  ConsoleFunction.hxx  ConsoleVariable.cxx  ConsoleVariable.hxx  DateTime.cxx  DateTime.hxx  Duration.cxx  Duration.hxx  FNV.cxx  Flags.cxx  Flags.hxx  Float.cxx  Float.hxx  FunctionRef.hxx  HandleTable.cxx  HandleTable.hxx  Instant.cxx  Instant.hxx  Int128.cxx  Int128.hxx  Intrusive.hxx  KnownColor.hxx  LockfreeIntrusive.hxx  MemoryBuffer.cxx  MemoryBuffer.hxx  Module.cxx  Module.hxx  Reference.hxx  Reflection.hxx  String.cxx  Unicode.cxx  Unicode.hxx  UninitializedObject.hxx  (+7 more)
Engine/Runtime/AnemoneDiagnostics/: CMakeLists.txt  ConsoleTraceListener.cxx  ConsoleTraceListener.hxx  Debug.cxx  Debug.hxx  Error.cxx  Error.hxx  FileTraceListener.cxx  FileTraceListener.hxx  Trace.cxx  Trace.hxx  TraceDispatcher.cxx  TraceDispatcher.hxx  TraceListener.cxx  TraceListener.hxx
Engine/Runtime/AnemoneInterop/: DynamicArray.hxx  Headers.hxx  MemoryBuffer.hxx  RingBuffer.hxx  SafeHandle.hxx  StringBuffer.hxx
Engine/Runtime/AnemoneMath/: Aligned.hxx  Bounds.hxx  Bounds.inl  CMakeLists.txt  Easing.cxx  Easing.hxx  Fixed.hxx  Functions.hxx  Matrix3x2.hxx  Matrix3x2.inl  Numbers.hxx  PidController.hxx  Point.hxx  Random.cxx  Random.hxx  Rect.hxx  Rect.inl  Size.hxx  Size.inl  Thickness.hxx  Thickness.inl  Transform2.hxx  Transform2.inl  Types.hxx
Engine/Runtime/AnemoneRandom/: CMakeLists.txt  Distribution.cxx  Distribution.hxx  Generator.cxx  Generator.hxx  Utils.cxx  Utils.hxx
Engine/Runtime/AnemoneRuntime/: Bitwise.hxx  Branchless.hxx  CMakeLists.txt  Checked.cxx  CommandLine.cxx  CommandLine.hxx  Compression.cxx  Compression.hxx  ConsoleFunction.cxx  ConsoleFunction.hxx  ConsoleVariable.cxx  ConsoleVariable.hxx  DateTime.cxx  DateTime.hxx  Delegate.hxx  Duration.cxx  Duration.hxx  ErrorCode.hxx  Flags.cxx  Float.cxx  Float.hxx  FunctionRef.hxx  Geometry.hxx  HandleTable.cxx  HandleTable.hxx  Hello.cxx  Hello.hxx  Initialize.cxx  Initialize.hxx  Instant.cxx  Instant.hxx  Int128.cxx  Int128.hxx  Intrusive.hxx  MemoryBuffer.cxx  MemoryBuffer.hxx  Module.cxx  Module.hxx  Profiler.hxx  Reference.hxx  (+15 more)
Engine/Runtime/AnemoneSecurity/: AES.cxx  AES.hxx  HashAlgorithm.cxx  HashAlgorithm.hxx  SHA256.cxx  SHA256.hxx  SHA512.cxx  SHA512.hxx
Engine/Runtime/AnemoneStorage/: BinaryReader.cxx  BinaryReader.hxx  BinaryWriter.cxx  BinaryWriter.hxx  CMakeLists.txt  FileHandle.cxx  FileHandle.hxx  FileInputStream.cxx  FileInputStream.hxx  FileOutputStream.cxx  FileOutputStream.hxx  FilePath.cxx  FilePath.hxx  FileSystem.cxx  FileSystem.hxx  InputStream.cxx  InputStream.hxx  MemoryInputStream.cxx  MemoryInputStream.hxx  MemoryMappedFile.cxx  MemoryMappedFile.hxx  MemoryOutputStream.cxx  MemoryOutputStream.hxx  OutputStream.cxx  OutputStream.hxx  StreamReader.cxx  StreamReader.hxx  StreamWriter.cxx  StreamWriter.hxx  TextReader.cxx  TextReader.hxx  TextWriter.cxx  TextWriter.hxx
Engine/Runtime/AnemoneSystem/: CMakeLists.txt  Clipboard.hxx  CommandLine.cxx  CommandLine.hxx  Environment.hxx  Process.cxx  Process.hxx  (+5 more)
Engine/Tasks/: CMakeLists.txt
Engine/UI/: CMakeLists.txt
Engine/VM/: CMakeLists.txt
Samples/Scratchpad/: CMakeLists.txt  Main.cxx
(+1798 files in other folders)
