add_subdirectory("Application")
add_subdirectory("Engine")
add_subdirectory("Graphics")
add_subdirectory("Memory")
add_subdirectory("Network")
add_subdirectory("Render")
add_subdirectory("Runtime")
add_subdirectory("Tasks")
add_subdirectory("UI")
add_subdirectory("VM")

if (Vulkan_FOUND AND WIN32)
    add_subdirectory("RenderVulkan")
endif()
