add_subdirectory("App")
add_subdirectory("Base")
add_subdirectory("Diagnostics")
add_subdirectory("Hash")
add_subdirectory("Input")
add_subdirectory("Interop")
add_subdirectory("Math")
add_subdirectory("Memory")
add_subdirectory("Network")
add_subdirectory("Platform")
add_subdirectory("Profiler")
add_subdirectory("Runtime")
add_subdirectory("Storage")
add_subdirectory("System")
add_subdirectory("Tasks")
add_subdirectory("Threading")
add_subdirectory("Security")
