target_sources(AnemoneRuntime
    PRIVATE
        "AutoResetEvent.cxx"
        "CancellationToken.cxx"
        "ConcurrentAccess.cxx"
        "ConditionVariable.cxx"
        "CriticalSection.cxx"
        "CriticalSectionPool.cxx"
        "CurrentThread.cxx"
        "Lock.cxx"
        "ManualResetEvent.cxx"
        "MpmcQueue.cxx"
        "MpscQueue.cxx"
        "ReaderWriterLock.cxx"
        "Runnable.cxx"
        "Semaphore.cxx"
        "SequenceIndex.cxx"
        "SequentialLock.cxx"
        "Spinlock.cxx"
        "SpinWait.cxx"
        "SpscQueue.cxx"
        "Thread.cxx"
        "UserAutoResetEvent.cxx"
        "UserCriticalSection.cxx"
        "UserManualResetEvent.cxx"
        "UserReaderWriterLock.cxx"
        "UserSemaphore.cxx"
    PUBLIC FILE_SET HEADERS FILES
        "AutoResetEvent.hxx"
        "CancellationToken.hxx"
        "ConcurrentAccess.hxx"
        "ConditionVariable.hxx"
        "CriticalSection.hxx"
        "CriticalSectionPool.hxx"
        "CurrentThread.hxx"
        "Lock.hxx"
        "ManualResetEvent.hxx"
        "Monitor.hxx"
        "MpmcQueue.hxx"
        "MpscQueue.hxx"
        "ReaderWriterLock.hxx"
        "Runnable.hxx"
        "Semaphore.hxx"
        "SequenceIndex.hxx"
        "SequentialLock.hxx"
        "Spinlock.hxx"
        "SpinWait.hxx"
        "SpscQueue.hxx"
        "SynchronizedSpscQueue.hxx"
        "Thread.hxx"
        "UserAutoResetEvent.hxx"
        "UserCriticalSection.hxx"
        "UserManualResetEvent.hxx"
        "UserReaderWriterLock.hxx"
        "UserSemaphore.hxx"
)

add_subdirectory("Platform")
