target_sources(TestRuntime
    PRIVATE
        "Checked.cxx"
        "CommandLine.cxx"
        "Duration.cxx"
        "Flags.cxx"
        "Float16.cxx"
        "FNV.cxx"
        "HandleTable.cxx"
        "IpAddress.cxx"
        "IpEndPoint.cxx"
        "Main.cxx"
        "MpmcQueue.cxx"
        "Path.cxx"
        "SpscQueue.cxx"
        "Unicode.cxx"
        "Uuid.cxx"
        "String.cxx"
)

add_subdirectory("Interop")
add_subdirectory("Numerics")
add_subdirectory("Security")
add_subdirectory("Threading")
