target_sources(TestRuntime
    PRIVATE
        "Checked.cxx"
        "CommandLine.cxx"
        "Duration.cxx"
        "Flags.cxx"
        "Float16.cxx"
        "FNV.cxx"
        "HandleTable.cxx"
        "IpAddress.cxx"
        "IpEndPoint.cxx"
        "LockFree.cxx"
        "Main.cxx"
        "MpmcQueue.cxx"
        "Path.cxx"
        "SpscQueue.cxx"
        "String.cxx"
        "Unicode.cxx"
        "Uuid.cxx"
)

add_subdirectory("Interop")
add_subdirectory("Numerics")
add_subdirectory("Security")
add_subdirectory("Storage")
add_subdirectory("Threading")
