target_sources(AnemoneRuntime
    PRIVATE
        "Checked.cxx"
        "Compression.cxx"
        "ConsoleFunction.cxx"
        "ConsoleVariable.cxx"
        "DateTime.cxx"
        "Duration.cxx"
        "Flags.cxx"
        "Float.cxx"
        "HandleTable.cxx"
        "Instant.cxx"
        "Int128.cxx"
        "String.cxx"
        "Unicode.cxx"
        "Uuid.cxx"
        "Version.cxx"
    PUBLIC FILE_SET HEADERS FILES
        "AdaptiveTimer.hxx"
        "Bitwise.hxx"
        "Branchless.hxx"
        "Checked.hxx"
        "Compression.hxx"
        "ConsoleFunction.hxx"
        "ConsoleVariable.hxx"
        "DateTime.hxx"
        "Delegate.hxx"
        "Duration.hxx"
        "Flags.hxx"
        "Float.hxx"
        "FunctionRef.hxx"
        "HandleTable.hxx"
        "Instant.hxx"
        "Int128.hxx"
        "Intrusive.hxx"
        "KnownColor.hxx"
        "Memory.hxx"
        "Reference.hxx"
        "Reflection.hxx"
        "String.hxx"
        "Unicode.hxx"
        "UninitializedObject.hxx"
        "Uuid.hxx"
        "Version.hxx"
)

add_subdirectory("Platform")
