add_subdirectory("Base")
add_subdirectory("Linux")
add_subdirectory("Unix")
add_subdirectory("Windows")

target_sources(AnemoneRuntime
    PRIVATE
        "Application.hxx"
        "Clipboard.hxx"
        "Debugger.hxx"
        "EntryPoint.hxx"
        "Environment.hxx"
        "FileHandle.hxx"
        "FileSystem.hxx"
        "NamedMutex.hxx"
        "Platform.hxx"
        "PlatformTraceListeners.hxx"
        "Process.hxx"
        "StackTrace.hxx"
        "SystemAllocator.hxx"
        "Types.hxx"
)
