add_subdirectory("Base")
add_subdirectory("Linux")
add_subdirectory("Unix")
add_subdirectory("Windows")

target_sources(AnemoneRuntime
    PRIVATE
        "Application.cxx"
        "Application.hxx"
        "Clipboard.hxx"
        "Debugger.hxx"
        "EntryPoint.hxx"
        "Environment.hxx"
        "FileHandle.hxx"
        "FilePath.cxx"
        "FilePath.hxx"
        "FileSystem.hxx"
        "NamedMutex.hxx"
        "Process.hxx"
        "ProcessorProperties.hxx"
        "StackTrace.hxx"
        "SystemAllocator.hxx"
        "Types.hxx"
)
